# multimodal-video-search

./: .gitignore  README.md  app.py  pyproject.toml
annotation/: GUIDE.md  relevance.schema.json
benchmarks/: query-slices.yaml
configs/: default.yaml
reports/: results.csv
scripts/: plot_results.py
src/videoscope/: __init__.py  benchmark.py  encoders.py  evaluate.py  index.py  modalities.py  pipeline.py  retrieval.py  sampling.py  search.py
tests/: test_core.py
