[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "videoscope"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "Pillow>=10", "PyYAML>=6"]

[project.optional-dependencies]
ml = ["torch>=2.1", "open-clip-torch>=2.24", "faiss-cpu>=1.7", "opencv-python-headless>=4.8", "faster-whisper>=1.0", "easyocr>=1.7", "sentence-transformers>=2.6", "tqdm>=4.66"]
demo = ["streamlit>=1.32", "pandas>=2"]
dev = ["pytest>=8", "ruff>=0.4"]
viz = ["pandas>=2", "matplotlib>=3.8"]

[project.scripts]
videoscope-index = "videoscope.pipeline:main"
videoscope-evaluate = "videoscope.evaluate:main"
videoscope-benchmark = "videoscope.benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
